# Sueno

./: .gitignore  LICENSE  README.md  annotation.properties  build.gradle  dependencies.properties  gradle.properties  jitpack.yml  mod.hjson  mod.json  s.sh  settings.gradle  settings.gradle.kts
.github/workflows/: build.json  commitTest.yml  discordPublication  discordPublication.yml  prTest.yml  scheduled-update.yml  updateBuildScripts.yml  workflow-build.yml
.updater/: version
.updater/scripts/: test.lua
android/: build.gradle
annotations/: build.gradle
annotations/src/org/durmiendo/sap/: BaseProc.java  SuenoSettings.java  SuenoSettingsProcessor.java
core/: build.gradle
core/res/: mod.hjson  mod.json
core/res/shaders/: black-hole.vert  ice.frag  ice.vert  void-strider-collapse-effect.frag
core/src/org/durmiendo/minedit/: R.java
docs/: buildSystem.md
extensions/durmiendo-builder-tasks/: core.gradle
extensions/mindustry-mod/: core.gradle
jni/: CMakeLists.txt  sueno_native.cpp
jni/include/: org_durmiendo_sueno_temperature_NativeTemperature.h
res/: mod.json
res/bundles/: bundle_ru.properties
res/data/: builder
res/models/bat/: models_accum.mtl
res/models/core/: untitled1.mtl
res/models/cube/: cube.mtl
res/models/hu/: hu.mtl
res/models/mita/: mita.mtl
res/models/ri/: sp.mtl
res/models/router/: router.mtl
res/shaders/: 3d.frag  3d.vert  4d.frag  4d.vert  black-hole.frag  black-hole.vert  blade.frag  contraction.frag  dead.frag  ice.frag  normal.frag  normal.vert  sun.frag  thermal.frag  void-space.frag  void-space.vert
settings/: local.json  settings.json
src/org/durmiendo/sueno/: MainSueno.java  SVars.java
src/org/durmiendo/sueno/basic/: SBuilding.java  Satellite.java  SatelliteBase.java  (+4 more)
(+230 files in other folders)
